# linux-filesystem-on-fuse

./: -g  .gitignore  CMakeLists.txt  Makefile  README.md  fuse  fuse.c  fuse.cpp  main.c  main.cpp  test_case  test_case.c  test_open.c  test_root.sh  tests.txt
.github/workflows/: c-cpp.yml
include/: fuse_impl.h  utils.hpp
include/layer0/: disk_interface.hpp
include/layer1/: data_structs.hpp
include/layer2/: close.h  file_mode.h  l2helper.h  mkdir.h  mknod.h  mock_layer0.h  mock_layer1.h  open.h  read.h  readdir.h  translate_pos.h  utils.h  write.h
integration/: main.cpp  test_fuse_impl.cpp  test_shell.cpp
integration/include/: utils.h
integration/src/: test_fuse_impl.cpp  test_shell.cpp  utils.cpp
integration/src/layer0/: test_rw.cpp  test_rwblock.cpp  test_rwpiece.cpp
integration/src/layer1/: test_gpt.cpp
integration/src/layer2/: test_dir_gpt.cpp  test_file_gpt.cpp
src/: fuse_impl.c  fuse_impl.cpp
src/layer0/: disk_interface.cpp
src/layer1/: data_structs.cpp
src/layer2/: close.cpp  l2helper.cpp  mkdir.cpp  mknod.cpp  open.cpp  read.cpp  readdir.cpp  translate_pos.cpp  utils.cpp  write.cpp
tests/: main.cpp  test_fuse_impl.cpp
tests/layer2/: test_close.cpp  test_open.cpp  test_read.cpp  test_translate_pos.cpp  test_write.cpp
